--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ endif()
 
 # Always look for headers using in the target
 set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
+message(STATUS "PRJ_SOURCE ${PROJECT_SOURCE_DIR}")
 
 include(GNUInstallDirs)
 include(ExternalProject)
